added comments and trim arguments